[project]
name = "wheelsheet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.5",
    "fastapi-cors>=0.0.6",
    "google-api-python-client>=2.154.0",
    "google-auth>=2.36.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "gspread>=6.1.4",
    "oauth2client>=4.1.3",
    "pandas>=2.2.3",
    "python-multipart>=0.0.17",
    "robin-stocks>=3.2.1",
    "sqlmodel>=0.0.22",
    "supabase>=2.10.0",
    "uvicorn>=0.32.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
]
